<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_drafts"
            android:title="@string/drafts" />
        <item
            android:id="@+id/menu_quick_notes"
            android:title="@string/quick_notes" />
        <item
            android:id="@+id/menu_pic_bundles"
            android:title="@string/pic_bundles" />
        <item
            android:id="@+id/menu_spy_reports"
            android:title="@string/spy_reports" />
        <item
            android:id="@+id/menu_future_plans_activities"
            android:title="@string/future_plans_activities" />
        <item
            android:id="@+id/menu_finished_things"
            android:title="@string/finished_things" />
    </group>

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_tags"
            android:title="@string/tags" />
        <item
            android:id="@+id/menu_archive"
            android:title="@string/archive" />
        <item
            android:id="@+id/menu_bin"
            android:title="@string/bin" />
    </group>

    <group
        android:checkableBehavior="none">
        <item
            android:id="@+id/menu_settings"
            android:title="@string/settings" />
    </group>

</menu>